set optional defaults and descriptions

--- a/mods/distanthorizons.pw.toml
+++ b/mods/distanthorizons.pw.toml
@@ -14,3 +14,5 @@ version = "75PXmyqH"
 
 [option]
 optional = true
+default = false
+description = "very large render distances with LODs and good performance, but can still be a bit buggy and/or laggy sometimes"
