--- a/mods/natural-motion-blur.pw.toml
+++ b/mods/natural-motion-blur.pw.toml
@@ -14,3 +14,5 @@ version = "NMDwkITy"
 
 [option]
 optional = true
+default = false
+description = "adds motion blur, you probably dont want this tbh but i like it"
