--- a/mods/colorful-subtitles.pw.toml
+++ b/mods/colorful-subtitles.pw.toml
@@ -14,4 +14,6 @@ version = "63UKqbzG"
 
 [option]
 optional = true
+default = false
+description = "Changes the color of subtitles based on their sound category."
 
