--- a/mods/cubes-without-borders.pw.toml
+++ b/mods/cubes-without-borders.pw.toml
@@ -14,4 +14,6 @@ version = "m350hyy8"
 
 [option]
 optional = true
+default = true
+description = "Allows you to play Minecraft in a borderless fullscreen window."
 
