--- a/mods/sodium-extra.pw.toml
+++ b/mods/sodium-extra.pw.toml
@@ -14,3 +14,5 @@ version = "anDafurZ"
 
 [option]
 optional = true
+default = false
+description = "i use this to show my fps and coordinates without f3"
