update cbbg (no longer incompat w motion blur !!)

--- a/mods/natural-motion-blur.pw.toml
+++ b/mods/natural-motion-blur.pw.toml
@@ -15,8 +15,4 @@ version = "NMDwkITy"
 [option]
 optional = true
 default = false
-description = '''
-adds motion blur, you probably dont want this tbh but i like it
-
-!! INCOMPATIBLE WITH CBBG !! CHOOSE ONLY ONE OR THE OTHER !!
-'''
+description = "adds motion blur, you probably dont want this tbh but i like it"
