--- a/config/global_packs.toml
+++ b/config/global_packs.toml
@@ -19,6 +19,6 @@ log_pack_ids = false
 	enable_builtin = []
 
 [datapacks]
-	required = []
+	required = ["globalpacks/data"]
 	optional = []
 	enable_builtin = []
