--- a/mods/axes-are-weapons.pw.toml
+++ b/mods/axes-are-weapons.pw.toml
@@ -1,6 +1,6 @@
 name = "Axes Are Weapons"
 filename = "AxesAreWeapons-1.9.1-fabric-1.21.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/1jvt7RTc/versions/KdxPAtZt/AxesAreWeapons-1.9.1-fabric-1.21.jar"
