--- a/mods/power-damage-fix.pw.toml
+++ b/mods/power-damage-fix.pw.toml
@@ -1,6 +1,6 @@
 name = "Power damage fix"
 filename = "powerfix-1.0.0+1.21.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/YkoU7Ywh/versions/HrQauBIu/powerfix-1.0.0%2B1.21.jar"
