--- a/mods/yungs-better-caves.pw.toml
+++ b/mods/yungs-better-caves.pw.toml
@@ -1,6 +1,6 @@
 name = "YUNG's Better Caves"
 filename = "YungsBetterCaves-1.21.1-Fabric-3.1.4.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/Dfu00ggU/versions/72UkhXm7/YungsBetterCaves-1.21.1-Fabric-3.1.4.jar"
